# DEA-Choquet

./: .gitignore  CONTRIBUTING.md  Generaluse.md  LICENSE  MEMORY.md  README.md  integration.py  main.py  pyproject.toml  requirements.txt
.agent/rules/: objective.md  security.md
.agent/snippets/: changelog-rules.md  design-system.md  feature-engineering.md  math-engine.md  schemas.md
.agent/workflows/: dmu.md
.kilocode/rules/: agents.md  gitworkflow.md  objective.md  patterns.md  testing.md
.kilocode/skills/: software-architect.skill
.kilocode/skills/software-architect/: SKILL.md
.pytest_cache/v/cache/: nodeids
Guides/: UX roadmap Cycle and Dimensions.md  Ux Guide.md  Worflow of the solver.md  auth_system_prompt.md  choquet_dea_guide.md  cross_efficiency_workflow_english.md  qa_audit_report.md
Mockup/: index.html  tailwind.config.js
Mockup/src/: App.tsx  index.css
Mockup/src/data/: mockData.ts
Mockup/src/pages/: Cycles.tsx  Dashboard.tsx  Dimensions.tsx  Employees.tsx  Settings.tsx
Mockup/src/types/: index.ts
UX/: UX-Guide-Admin.md  UX-Guide-Employee.md  UX-Optimized-Engine-Specs.md
examples/: basic_usage.py  paper_reproduction.py
src/: models.py
src/analysis/: matrix.py
src/dea_bounded_rationality.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dea_br/: __init__.py  bounded_rationality_models.py  ccr_model.py  choquet.py  cross_efficiency.py  evaluator.py  prospect_theory.py
src/solver/: choquet_dea.py
tests/: test_ccr_model.py  test_choquet.py  test_evaluator.py  test_math_validation.py  test_prospect_theory.py
(+30 files in other folders)
